some default form styling

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -22,7 +22,8 @@
 @import "pages/home/hero";
 @import "pages/home/top-names";
 @import "pages/leaderboard/leaderboard";
-@import "pages/login/login";
+@import "pages/user/login";
+@import "pages/user/register";
 @import "pages/report/report";
 @import "pages/reports/reports";
 
