toastify pulling in correct styles again, renaming classes

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -14,6 +14,7 @@
 @import "components/secondary-nav";
 @import "components/sponsor-link";
 @import "components/testimonials";
+@import "components/toastify";
 @import "components/trust-bar";
 @import "pages/contest/contest";
 @import "pages/contests/contests";
