--- a/src/styles/components/secondary-nav.scss
+++ b/src/styles/components/secondary-nav.scss
@@ -26,6 +26,8 @@ li.secondary-nav__item {
   line-height: 130%;
   text-decoration: none;
 
+  cursor: pointer;
+
   &.active,
   &.react-tabs__tab--selected {
     color: $color__white;
