loader, small changes to typography

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,6 +4,7 @@
 @import "base/layout";
 @import "base/tables";
 @import "base/typography";
+@import "base/animations/skeleton-loader";
 @import "components/button";
 @import "components/contest-tile";
 @import "components/dropdown";
