--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -51,6 +51,7 @@ $color__background: $color__n-100;
 // Text
 $color__text: $color__n-20;
 $color__headline: $color__white;
+$color__subline: $color__n-10;
 
 // Forms
 $color__form-error: $color__red;
