--- a/src/styles/base/forms.scss
+++ b/src/styles/base/forms.scss
@@ -63,7 +63,7 @@ form {
   }
 }
 fieldset {
-  margin: $spacing__m 0 $spacing__m;
+  margin: $spacing__l 0;
 }
 // Default Labels
 // --------------------
