--- a/src/styles/pages/user/register.scss
+++ b/src/styles/pages/user/register.scss
@@ -40,3 +40,11 @@
     }
   }
 }
+
+.register__payment-wallet {
+  margin: $spacing__xl 0 $spacing__l 0;
+}
+
+.register__captcha-container {
+  margin-top: $spacing__l;
+}
