--- a/src/styles/base/animations/skeleton-loader.scss
+++ b/src/styles/base/animations/skeleton-loader.scss
@@ -1,33 +1,35 @@
 @import "../../variables";
 
-.skeleton-loader {
-  display: inline-block;
-  height: 1em;
-  position: relative;
-  overflow: hidden;
-  background-color: #dddbdd;
-
-  &::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transform: translateX(-100%);
-    background-image: linear-gradient(
-      90deg,
-      rgba(#fff, 0) 0,
-      rgba(#fff, 0.2) 20%,
-      rgba(#fff, 0.5) 60%,
-      rgba(#fff, 0)
-    );
-    animation: shimmer 2s infinite;
-    content: "";
+// TODO: Finish this
+.skeleton-loader div div {
+  margin-bottom: $spacing__l;
+  border-radius: $border-radius__m;
+  min-height: 10rem;
+  background: linear-gradient(
+      -45deg,
+      rgba(white, 0.3) 0%,
+      rgba(white, 0.1) 100%
+    ),
+    linear-gradient(
+      rgba($color__button-blurple, 0.1) 0%,
+      rgba($color__button-blurple, 0.1) 45%,
+      transparent 45%,
+      transparent 55%,
+      rgba($color__button-blurple, 0.1) 55%,
+      rgba($color__button-blurple, 0.1) 100%
+    ),
+    transparent;
+  background-size: 200% 100%;
+  @include accessible-animation {
+    animation: gradient 2s ease infinite;
   }
 
-  @keyframes shimmer {
+  @keyframes gradient {
+    0% {
+      background-position: -200% 100%;
+    }
     100% {
-      transform: translateX(100%);
+      background-position: -300% 100%;
     }
   }
 }
