--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -49,6 +49,11 @@ html {
 
 main {
   width: 100%;
+  padding-bottom: $spacing__l;
+
+  @include breakpoint("m") {
+    padding-bottom: $spacing__xl;
+  }
 }
 
 .full-width {
